--- a/titanic_machine_learning/titanic_dataset_predictionml.ipynb
+++ b/titanic_machine_learning/titanic_dataset_predictionml.ipynb
@@ -4,7 +4,6 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyN4n9SSqzNpXJEqtUK5lGz1",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -31,8 +30,8 @@
       "source": [
         "# Titanic Machine Learning – Learning Project\n",
         "\n",
-        "This notebook is a learning exercise focused on understanding\n",
-        "the basic machine learning workflow using the Titanic dataset."
+        "This notebook is a learning exercise focused on\n",
+        "the machine learning workflow using the Titanic dataset."
       ],
       "metadata": {
         "id": "t2OjcFNHYhPy"
